// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Demo CustomUsageExample wroks fine 1`] = `
<div>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 300px; max-width: 100px; min-width: 100px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项一
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item t-dropdown__item--suffix"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项二
                    </span>
                  </div>
                  <svg
                    class="t-icon t-icon-chevron-right t-dropdown__item__item-icon t-dropdown__item__item-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项三
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项四
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         下拉菜单 
        
      </span>
    </button>
    
    
  </div>
</div>
`;

exports[`Dropdown Demo DisableUsageExample wroks fine 1`] = `
<div
  class="tdesign-demo-dropdown"
>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 300px; max-width: 100px; min-width: 112px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项一
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项二
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item t-is-disabled"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项三
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item t-is-disabled"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项四
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        <span
          class="tdesign-demo-dropdown__text"
        >
           下拉菜单 
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        
      </span>
    </button>
    
    
  </div>
</div>
`;

exports[`Dropdown Demo EventUsageExample wroks fine 1`] = `
<div>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 300px; max-width: 100px; min-width: 88px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项一
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项二
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项三
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项四
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         下拉菜单 
        
      </span>
    </button>
    
    
  </div>
</div>
`;

exports[`Dropdown Demo LongUsageExample wroks fine 1`] = `
<div>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 400px; max-width: 100px; min-width: 88px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项1
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项2
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项3
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项4
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项5
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项6
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项7
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项8
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项9
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项10
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项11
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项12
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项13
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项14
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项15
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项16
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项17
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项18
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项19
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项20
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         下拉菜单 
        
      </span>
    </button>
    
    
  </div>
</div>
`;

exports[`Dropdown Demo MultipleUsageExample wroks fine 1`] = `
<div
  class="tdesign-demo-dropdown"
>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 300px; max-width: 120px; min-width: 10px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item t-dropdown__item--suffix"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项一
                    </span>
                  </div>
                  <svg
                    class="t-icon t-icon-chevron-right t-dropdown__item__item-icon t-dropdown__item__item-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item t-dropdown__item--suffix"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项二选项二选项二选项二
                    </span>
                  </div>
                  <svg
                    class="t-icon t-icon-chevron-right t-dropdown__item__item-icon t-dropdown__item__item-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item t-dropdown__item--suffix"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项三
                    </span>
                  </div>
                  <svg
                    class="t-icon t-icon-chevron-right t-dropdown__item__item-icon t-dropdown__item__item-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item t-dropdown__item--suffix"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      选项四
                    </span>
                  </div>
                  <svg
                    class="t-icon t-icon-chevron-right t-dropdown__item__item-icon t-dropdown__item__item-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        <span
          class="tdesign-demo-dropdown__text"
        >
           下拉菜单 
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        
      </span>
    </button>
    
    
  </div>
</div>
`;

exports[`Dropdown Demo SplitUsageExample wroks fine 1`] = `
<div
  class="t-popup-reference"
>
  <transition-stub>
    <div
      aria-hidden="true"
      class="t-popup"
      role="tooltip"
      style="display: none;"
    >
      <div
        class="t-popup-content t-dropdown"
      >
        
        <div
          class="t-dropdown__menu"
        >
          
          <div
            class="t-dropdown__menu-column narrow-scrollbar"
            style="max-height: 300px; max-width: 100px; min-width: 88px;"
          >
            
            <div>
              <div
                class="t-dropdown__item"
              >
                <div
                  class="t-dropdown__item-content"
                >
                  <span
                    class="t-dropdown__item-text"
                  >
                    操作一
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <div>
              <div
                class="t-dropdown__item"
              >
                <div
                  class="t-dropdown__item-content"
                >
                  <span
                    class="t-dropdown__item-text"
                  >
                    操作二
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <div>
              <div
                class="t-dropdown__item"
              >
                <div
                  class="t-dropdown__item-content"
                >
                  <span
                    class="t-dropdown__item-text"
                  >
                    操作三
                  </span>
                </div>
                <!---->
              </div>
              <div
                class="t-divider t-divider--horizontal"
              >
                <!---->
              </div>
            </div>
            <div>
              <div
                class="t-dropdown__item"
              >
                <div
                  class="t-dropdown__item-content"
                >
                  <span
                    class="t-dropdown__item-text"
                  >
                    操作四
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
            
          </div>
          
        </div>
        
        <!---->
      </div>
    </div>
  </transition-stub>
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       下拉菜单 
      
    </span>
  </button>
  
  
</div>
`;

exports[`Dropdown Demo buttonUsageExample wroks fine 1`] = `
<div>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 300px; max-width: 100px; min-width: 10px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作一
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作二
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作三
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作四
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         下拉菜单 
        
      </span>
    </button>
    
    
  </div>
</div>
`;

exports[`Dropdown base demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
>
  <div
    class="t-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-dropdown"
        >
          
          <div
            class="t-dropdown__menu"
          >
            
            <div
              class="t-dropdown__menu-column narrow-scrollbar"
              style="max-height: 300px; max-width: 100px; min-width: 112px;"
            >
              
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作一
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作二
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作三
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div>
                <div
                  class="t-dropdown__item"
                >
                  <div
                    class="t-dropdown__item-content"
                  >
                    <span
                      class="t-dropdown__item-text"
                    >
                      操作四
                    </span>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              
            </div>
            
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    
    <div
      class="tdesign-demo-dropdown-trigger"
    >
      <button
        class="t-button t-size-m t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          <span
            class="tdesign-demo-dropdown__text"
          >
             下拉菜单 
            <svg
              class="t-icon t-icon-chevron-down"
            >
              <use
                href="#t-icon-chevron-down"
              />
            </svg>
          </span>
          
        </span>
      </button>
    </div>
    
    
  </div>
</div>
`;
